optimize the code